test/tools/router_check/test/config/Redirect_expected.json
[
  {
    "authority": "www.foo.com",
    "path": "/foo",
    "check": {"path_redirect": "none"},
    "ssl": true,
    "internal": true
  },
  {
    "authority": "www.lyft.com",
    "path": "/foo",
    "check": {"path_redirect": "none"},
    "ssl": true,
    "internal": true
  },
  {
    "authority": "www.lyft.com",
    "path": "/foo",
    "check": {"path_redirect": "https://www.lyft.com/foo"},
    "ssl": false,
    "internal": false
  },
  {
    "authority": "api.lyft.com",
    "path": "/foo",
    "check": {"path_redirect": "none"},
    "internal": true
  },
  {
    "authority": "api.lyft.com",
    "path": "/foo",
    "check": {"path_redirect": "https://api.lyft.com/foo"}
  },
  {
    "authority": "redirect.lyft.com",
    "path": "/foo",
    "check": {"path_redirect": "http://new.lyft.com/foo"},
    "ssl": false,
    "internal": false
  },
  {
    "authority": "redirect.lyft.com",
    "path": "/bar",
    "check": {"path_redirect": "https://redirect.lyft.com/new_bar"},
    "ssl": true
  },
  {
    "authority": "redirect.lyft.com",
    "path": "/baz",
    "check": {"path_redirect": "https://new.lyft.com/new_baz"},
    "ssl": true,
    "internal": false
  }
]
